@@ -24,7 +24,8 @@ border_color = #ffffff 70
 # PANEL
 #---------------------------------------------
 panel_monitor = all
-panel_position = bottom center
+panel_position = bottom center horizontal
+#panel_position = center left vertical
 panel_size = 94% 30
 panel_margin = 0 0
 panel_padding = 7 0
@@ -45,7 +46,7 @@ taskbar_background_id = 0
 #---------------------------------------------
 task_icon = 1
 task_text = 1
-task_width = 140
+task_maximum_size = 140 30
 task_centered = 1
 task_padding = 6 3
 task_font = sans 7
